--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ before_install:
 install:
 - mvn install -Dmaven.javadoc.skip=true -B -V
 - ls -l
-- docker build --build-arg JAR_FILE=/target/project.jar -t 592115514/project234-backend
-  .
+- docker build --build-arg JAR_FILE=/target/project.jar -t 592115514/project234-backend .
 - docker push 592115514/project234-backend
 - docker pull dto80/project234-frontend:latest
 cache:
