--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,12 @@ services:
     image: 592115514/project234-backend:latest
     ports: 
       - "8093:8080"
+    volumes:
+      - type: bind
+        source: ./data
+        target: /data
   frontend:
     image: dto80/project234-frontend:latest
     ports:
       - "8094:80"
-    volumes:
-      - type: bind
-        source: ./data
-        target: /Users/tach/Desktop/234project-backend
+    
